contato e ajustes iniciais da view home

--- a/CondoSimples/CondoSimples/Views/Employee/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Details.cshtml
@@ -4,22 +4,12 @@
     ViewBag.Title = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>@Html.DisplayFor(model => model.Name)</h2>
 
 <div>
-    <h4>Funcionário</h4>
-    <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
+        <dt class="pull-left">
+            Email
         </dt>
 
         <dd>
