--- a/CondoSimples/CondoSimples/Views/Employee/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Index.cshtml
@@ -12,6 +12,7 @@
             @Html.ActionLink("Novo", "Create")
         </p>
     }
+
 <table class="table">
     <tr>
         <th>
@@ -56,13 +57,15 @@
             @Html.DisplayFor(modelItem => item.WorkShift)
         </td>
         <td>
-            @if (User.IsInRole("Sindico"))
-            {
-                @Html.ActionLink("Editar", "Edit", new { id = item.ID }) @Html.Raw("|")
-                @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) @Html.Raw("|")
-                @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
-            }
-        </td>
+                        @if (User.IsInRole("Sindico"))
+                        {
+                            <button class="btn btn-default">
+                                Editar @Html.ActionLink("Editar", "Edit", new { id = item.ID })
+                            </button>
+                                @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) @Html.Raw("|")
+                                @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+                                }
+</td>
     </tr>
 }
 
