--- a/CondoSimples/CondoSimples/Views/Home/About.cshtml
+++ b/CondoSimples/CondoSimples/Views/Home/About.cshtml
@@ -31,6 +31,6 @@
 
 <p class="last-ones">Para começar a aproveitar todas as vantagens do CondoSimples, não perca tempo, @Html.ActionLink("cadastre seu condomínio", "Create", "Condo")!</p>
 
-<p class="last-ones">Para mais informações, <a href="#">entre em contato conosco</a>.</p>
+<p class="last-ones">Para mais informações, <a href="#">@Html.ActionLink("entre em contato conosco", "Contact")</a></p>
 
 <p class="last-ones">Saiba mais sobre nossos <a href="#">Termos de uso</a> e <a href="#">Política de privacidade</a>.</p>
