--- a/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                         <li role="presentation">@Html.ActionLink("Usuários", "Index", "User")</li>
                         <li role="presentation">@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
                         <li role="presentation">@Html.ActionLink("Mural", "Index", "Board")</li>
+                        <li role="presentation">@Html.ActionLink("Ocorrências", "Index", "Occurrence")</li>
                         <li role="presentation">@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
                         <li role="presentation">@Html.ActionLink("Encomendas", "IndexByUser", "Order")</li>
                         <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
@@ -45,6 +46,7 @@
                         <li role="presentation">@Html.ActionLink("Funcionários", "Index", "Employee")</li>
                         @*<li role="presentation">@Html.ActionLink("Meus dados", "Edit", "User")</li>*@
                         <li role="presentation">@Html.ActionLink("Mural", "Index", "Board")</li>
+                        <li role="presentation">@Html.ActionLink("Ocorrências", "Index", "Occurrence")</li>
                         <li role="presentation">@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
                         <li role="presentation">@Html.ActionLink("Encomendas", "IndexByUser", "Order")</li>
                         <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
@@ -57,6 +59,7 @@
                         <li role="presentation">@Html.ActionLink("Home", "Index", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
                         <li role="presentation">@Html.ActionLink("Encomendas", "Index", "Order")</li>
+                        <li role="presentation">@Html.ActionLink("Ocorrências", "Index", "Occurrence")</li>
                         <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
                         <li role="presentation" class="visible-xs"><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
                     </ul>
