tabelas responsivas e listradas

--- a/CondoSimples/CondoSimples/Views/Borrow/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Borrow/Index.cshtml
@@ -11,7 +11,7 @@
     @Html.ActionLink("Minhas solicitações", "IndexByUser") |
     @Html.ActionLink("Meus empréstimos", "Lended") 
 </p>
-<table class="table">
+<table class="table-responsive table-hover table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Description)
