--- a/CondoSimples/CondoSimples/Views/Condo/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Condo/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Novo", "Create")
 </p>
-<table class="table">
+<table class="table-responsive table-hover table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
