--- a/CondoSimples/CondoSimples/Views/OutSourcer/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/OutSourcer/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Novo prestador", "Create")
 </p>
-<table class="table">
+<table class="table-responsive table-hover table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.CompanyName)
