--- a/CondoSimples/CondoSimples/Views/Board/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Index.cshtml
@@ -25,7 +25,7 @@
         @Html.ActionLink("Publicações pendentes", "IndexAdmin")
     }
 </p>
-<table class="table">
+<table class="table-responsive table-hover table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Post)
