--- a/CondoSimples/CondoSimples/Views/Board/IndexByUser.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/IndexByUser.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Voltar", "Index")
 </p>
-<table class="table">
+<table class="table-responsive table-hover table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Post)
