--- a/CondoSimples/CondoSimples/Views/Employee/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Index.cshtml
@@ -13,7 +13,7 @@
         </p>
     }
 
-<table class="table">
+<table class="table-responsive table-hover table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
