--- a/CondoSimples/CondoSimples/Views/Occurrence/IndexSolved.cshtml
+++ b/CondoSimples/CondoSimples/Views/Occurrence/IndexSolved.cshtml
@@ -12,7 +12,7 @@
     @Html.ActionLink("Pendentes", "IndexPending") |
     @Html.ActionLink("Resolvidas", "IndexSolved")
 </p>
-<table class="table">
+<table class="table-responsive table-hover table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.User)
