--- a/CondoSimples/CondoSimples/Views/Order/IndexByUser.cshtml
+++ b/CondoSimples/CondoSimples/Views/Order/IndexByUser.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Index</h2>
 
-<table class="table">
+<table class="table-responsive table-hover table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.DateReceived)
