--- a/CondoSimples/CondoSimples/Views/Borrow/IndexByUser.cshtml
+++ b/CondoSimples/CondoSimples/Views/Borrow/IndexByUser.cshtml
@@ -9,61 +9,64 @@
 <p>
     @Html.ActionLink("Voltar", "Index")
 </p>
-<table class="table-responsive table-hover table-striped">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateRequire)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateReturn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateComplete)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserRequest)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserLending)
-        </th>
-        <th></th>
-    </tr>
+<div class="table-responsive">
+    <table class="table table-hover table-striped">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Quantity)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateRequire)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateReturn)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateComplete)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserRequest)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserLending)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Quantity)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateRequire)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateReturn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateComplete)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserRequest.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserLending.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Detalhes", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Excluir", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateRequire)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateReturn)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateComplete)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserRequest.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserLending.Email)
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
+</div>
