--- a/CondoSimples/CondoSimples/Views/Borrow/Lended.cshtml
+++ b/CondoSimples/CondoSimples/Views/Borrow/Lended.cshtml
@@ -9,62 +9,65 @@
 <p>
     @Html.ActionLink("Voltar", "Index")
 </p>
-<table class="table-responsive table-hover table-striped">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateRequire)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateReturn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateComplete)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserRequest)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserLending)
-        </th>
-        <th></th>
-    </tr>
+<div class="table-responsive">
+    <table class="table table-hover table-striped">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Quantity)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateRequire)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateReturn)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateComplete)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserRequest)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserLending)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Quantity)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateRequire)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateReturn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateComplete)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserRequest.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserLending.Email)
-        </td>
-        <td>
-            @if (item.DateComplete == null)
-            {
-                @Html.ActionLink("Item devolvido", "Return", new { id = item.ID }, new { onclick = "return confirm('Item devolvido?');" })
-            }
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateRequire)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateReturn)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateComplete)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserRequest.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserLending.Email)
+                </td>
+                <td>
+                    @if (item.DateComplete == null)
+                    {
+                        @Html.ActionLink("Item devolvido", "Return", new { id = item.ID }, new { onclick = "return confirm('Item devolvido?');" })
+                    }
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
+</div>
