--- a/CondoSimples/CondoSimples/Views/Condo/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Condo/Create.cshtml
@@ -4,6 +4,30 @@
     ViewBag.Title = "Novo";
 }
 
+<script>
+    $.ajax({
+        type: 'POST',
+        url: 'http://kyleschaeffer.com/feed/',
+        data: { postVar1: 'theValue1', postVar2: 'theValue2' },
+        beforeSend: function () {
+            // this is where we append a loading image
+            $('#ajax-panel').html('<div class="loading"><img src="/images/loading.gif" alt="Loading..." /></div>');
+        },
+        success: function (data) {
+            // successful request; do something with the data
+            $('#ajax-panel').empty();
+            $(data).find('item').each(function (i) {
+                $('#ajax-panel').append('<h4>' + $(this).find('title').text() + '</h4><p>' + $(this).find('link').text() + '</p>');
+            });
+        },
+        error: function () {
+            // failed request; give feedback to user
+            $('#ajax-panel').html('<p class="error"><strong>Oops!</strong> Try that again in a few moments.</p>');
+        }
+    });
+</script>
+
+
 <h2>Novo</h2>
 
 @using (Html.BeginForm()) 
@@ -29,6 +53,12 @@
                 @Html.ValidationMessageFor(model => model.ParkingSlots, "", new { @class = "text-danger" })
             </div>
         </div>
+
+
+        <div id="towers">
+            
+        </div>
+
 
         <div class="form-group">
             <label for="towers" class = "control-label col-md-2">Número de torres</label>
