--- a/CondoSimples/CondoSimples/Views/User/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Details.cshtml
@@ -93,6 +93,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Voltar para usuários", "Index")
 </p>
