--- a/CondoSimples/CondoSimples/Views/User/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Index.cshtml
@@ -6,6 +6,12 @@
 
 <h2>Condôminos cadastrados</h2>
 
+<form method="get" action="/User/Index">
+    <input type="search" name="txt" />
+    <input type="submit" value="Pesquisar" />
+</form>
+
+
 <p>
     @Html.ActionLink("Adicionar usuário", "Create")
 </p>
