--- a/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                         <li role="presentation">@Html.ActionLink("Ocorrências", "Index", "Occurrence")</li>
                         <li role="presentation">@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
                         <li role="presentation">@Html.ActionLink("Encomendas", "IndexByUser", "Order")</li>
+                        <li role="presentation">@Html.ActionLink("Notificação", "Index", "Notification")</li>
                         <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
                         <li role="presentation" class="visible-xs"><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
                     </ul>
@@ -57,6 +58,7 @@
                 {
                     <ul class="nav navbar-nav">
                         <li role="presentation">@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li role="presentation">@Html.ActionLink("Usuários", "Index", "User")</li>
                         <li role="presentation">@Html.ActionLink("Prestadores", "Index", "OutSourcer")</li>
                         <li role="presentation">@Html.ActionLink("Encomendas", "Index", "Order")</li>
                         <li role="presentation">@Html.ActionLink("Ocorrências", "Index", "Occurrence")</li>
