Upload imagem Board

--- a/CondoSimples/CondoSimples/Views/Board/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Details.cshtml
@@ -41,7 +41,13 @@
         <dd>
             @Html.DisplayFor(model => model.Published)
         </dd>
+        <dt>
+            Foto
+        </dt>
 
+        <dd>
+            <img src="@ViewBag.Image" />
+        </dd>
     </dl>
 </div>
 <p>
