--- a/CondoSimples/CondoSimples/Views/Board/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Nova publicação</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -19,6 +19,12 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Post, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Post, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Imagem</label>
+            <div class="col-md-10">
+                <input type="file" name="Image" accept="image/jpeg, image/jpg" />
             </div>
         </div>
 
